--- a/src/style/News.css
+++ b/src/style/News.css
@@ -5,6 +5,9 @@
   margin-left: 22%;
   margin-right: 22%;
 }
+.NewsText p{
+  margin-top: -1%;
+}
 
 .NewsNew {
   background-color: black;
@@ -19,6 +22,7 @@
 }
 
 .NewsCollection {
+  position: relative;
   display: flex;
 }
 .NewsShoe1 {
@@ -30,19 +34,138 @@
 .NewsShoe1 img {
   height: fit-content;
   width: fit-content;
+  position: relative;
 }
 .NewsShoe2 {
   margin-top: 8.1%;
   margin-left: -8%;
   position: relative;
 }
-.NewsShoe2 img :first-of-type{
-    height: fit-content;
-    width: fit-content;
+.NewsShoe2 img:first-of-type {
+  height: fit-content;
+  width: fit-content;
 }
 
-#NewShoeImg{
-    position: absolute;
-    right: 15%;
-    top: 22.5%;
+.NewsShoe2 :not(img:first-of-type) {
+  position: absolute;
+  right: 15%;
+  top: 22.5%;
+}
+
+.Description {
+  font-family: Poppins;
+  position: absolute;
+  top: 57%;
+  text-align: center;
+  left: 40%;
+}
+.Description p:first-of-type {
+  border-bottom: 1px solid black;
+  font-weight: 100;
+  font-size: 1.25em;
+}
+.Description :not(p:first-of-type) {
+  margin-top: -15px;
+  font-size: 1.5em;
+  color: #ff4e5b;
+}
+.Description :not(p:first-of-type)::first-letter {
+  color: black;
+}
+
+#Description2 {
+  font-family: Poppins;
+  position: absolute;
+  top: 75%;
+  text-align: center;
+  left: -80%;
+}
+#Description2 p:first-of-type {
+  border-bottom: 1px solid black;
+  font-weight: 100;
+  font-size: 1.25em;
+}
+#Description2 :not(p:first-of-type) {
+  margin-top: 60px;
+  margin-right: 35px;
+  font-size: 1.5em;
+  color: #ff4e5b;
+}
+#Description2 :not(p:first-of-type)::first-letter {
+  color: black;
+}
+
+#Stars1 {
+  background-image: url("../images/star-icon.png");
+  height: 15px;
+  width: 75px;
+  margin-top: -25px;
+  margin-left: 20px;
+}
+#Stars2 {
+  background-image: url("../images/star-icon.png");
+  height: 15px;
+  width: 75px;
+  top: 35px;
+  right: 143px;
+}
+#See{
+  font-family: Poppins;
+  font-weight: 100;
+  font-size: 0.85em;
+  position: absolute;
+  left:22%;
+  top: 90%;
+  background-color: #ff4e5b;
+  color: white;
+  padding: 15px 55px;
+}
+
+.RunningShoes{
+  display: flex;
+  margin-left: 22%;
+  margin-top: 3%;
+  margin-bottom: 7%;
+  background-color: rgb(211, 211, 211);
+  width: fit-content;
+  padding: 5% 16.75% 5% 5%;
+}
+.RunningShoesText{
+  display: flex;
+  flex-direction: column;
+  margin-left: 30%;
+}
+.RunningShoesText h1{
+  font-family: Poppins;
+  font-weight: 200;
+  font-size: 3.5em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+  color: #ff4e5b;
+}
+.RunningShoesText h2{
+  font-family: Poppins;
+  font-weight: 200;
+  font-size: 3.5em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.RunningShoesText h3{
+  font-family: Poppins;
+  font-weight: 200;
+  font-size: 3.5em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.RunningShoesText h3::first-letter{
+  color: #ff4e5b;
+  font-size: 0.75em;
+}
+.RunningShoesText p{
+  background-color: #ff4e5b;
+  text-align: center;
+  justify-self: center;
+  padding: 15px 95px;
+  color: white;
 }
