--- a/src/style/News.css
+++ b/src/style/News.css
@@ -1,11 +1,13 @@
-.NewsText {
+.News {
+  margin: 0% auto;
+  width: 66%;
   justify-content: center;
+}
+.NewsText {
   font-family: Poppins;
   font-weight: 100;
-  margin-left: 22%;
-  margin-right: 22%;
 }
-.NewsText p{
+.NewsText p {
   margin-top: -1%;
 }
 
@@ -15,7 +17,6 @@
   width: fit-content;
   height: fit-content;
   padding: 10px 25px;
-  margin-left: 22%;
   z-index: 3;
   font-family: Poppins;
   font-weight: 100;
@@ -24,52 +25,61 @@
 .NewsCollection {
   position: relative;
   display: flex;
+  margin: 0% auto;
 }
+
 .NewsShoe1 {
   margin-top: -8px;
   margin-left: -4%;
   z-index: 2;
   position: relative;
+  margin-bottom: 100px;
 }
+
 .NewsShoe1 img {
   height: fit-content;
   width: fit-content;
   position: relative;
 }
-.NewsShoe2 {
-  margin-top: 8.1%;
-  margin-left: -8%;
+
+.NewShoe2 {
+  height: fit-content;
+  width: fit-content;
   position: relative;
 }
+
 .NewsShoe2 img:first-of-type {
   height: fit-content;
   width: fit-content;
+  position: absolute;
+  right: 4%;
+  top: 23%;
 }
 
 .NewsShoe2 :not(img:first-of-type) {
   position: absolute;
-  right: 15%;
-  top: 22.5%;
+  right: 13%;
+  top: 40%;
 }
 
-.Description {
+#Description {
   font-family: Poppins;
   position: absolute;
-  top: 57%;
+  top: 65%;
   text-align: center;
   left: 40%;
 }
-.Description p:first-of-type {
+#Description p:first-of-type {
   border-bottom: 1px solid black;
   font-weight: 100;
   font-size: 1.25em;
 }
-.Description :not(p:first-of-type) {
+#Description :not(p:first-of-type) {
   margin-top: -15px;
   font-size: 1.5em;
   color: #ff4e5b;
 }
-.Description :not(p:first-of-type)::first-letter {
+#Description :not(p:first-of-type)::first-letter {
   color: black;
 }
 
@@ -78,14 +88,14 @@
   position: absolute;
   top: 75%;
   text-align: center;
-  left: -80%;
+  left: -2%;
 }
 #Description2 p:first-of-type {
   border-bottom: 1px solid black;
   font-weight: 100;
   font-size: 1.25em;
 }
-#Description2 :not(p:first-of-type) {
+#Description2 :not(p:first-of-type):not(div) {
   margin-top: 60px;
   margin-right: 35px;
   font-size: 1.5em;
@@ -102,40 +112,46 @@
   margin-top: -25px;
   margin-left: 20px;
 }
+
 #Stars2 {
   background-image: url("../images/star-icon.png");
   height: 15px;
   width: 75px;
-  top: 35px;
-  right: 143px;
+  top: 105px;
+  right: 160px;
+  justify-content: center;
 }
-#See{
+
+#See {
   font-family: Poppins;
   font-weight: 100;
   font-size: 0.85em;
   position: absolute;
-  left:22%;
   top: 90%;
   background-color: #ff4e5b;
   color: white;
   padding: 15px 55px;
 }
 
-.RunningShoes{
+.RunningShoes {
   display: flex;
-  margin-left: 22%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 3%;
-  margin-bottom: 7%;
+  margin-bottom: 3%;
   background-color: rgb(211, 211, 211);
   width: fit-content;
   padding: 5% 16.75% 5% 5%;
 }
-.RunningShoesText{
+
+.RunningShoesText {
   display: flex;
   flex-direction: column;
-  margin-left: 30%;
+  text-align: left;
+  margin-left: 15%;
 }
-.RunningShoesText h1{
+
+.RunningShoesText h1 {
   font-family: Poppins;
   font-weight: 200;
   font-size: 3.5em;
@@ -144,25 +160,29 @@
 
   color: #ff4e5b;
 }
-.RunningShoesText h2{
+
+.RunningShoesText h2 {
   font-family: Poppins;
   font-weight: 200;
   font-size: 3.5em;
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.RunningShoesText h3{
+
+.RunningShoesText h3 {
   font-family: Poppins;
   font-weight: 200;
   font-size: 3.5em;
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.RunningShoesText h3::first-letter{
+
+.RunningShoesText h3::first-letter {
   color: #ff4e5b;
   font-size: 0.75em;
 }
-.RunningShoesText p{
+
+.RunningShoesText p {
   background-color: #ff4e5b;
   text-align: center;
   justify-self: center;
